--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,10 +22,12 @@ jobs:
 
       - name: Build the Docker image
         run: |
-          IMAGE_TAG=mohdjami/koinx-assignment:$(date +%s)
-          docker build . --file Dockerfile --tag mohdjami/koinx-assignment:latest --tag $IMAGE_TAG
-
+          IMAGE_NAME=mohdjami/koinx-assignment
+          TIMESTAMP_TAG=${IMAGE_NAME}:$(date +%s)
+          docker build . --file Dockerfile --tag ${IMAGE_NAME}:latest --tag $TIMESTAMP_TAG
+          
       - name: Push Docker image to Docker Hub
         run: |
-          docker push mohdjami/koinx-assignment:latest
-          docker push $IMAGE_TAG
+          IMAGE_NAME=mohdjami/koinx-assignment
+          docker push ${IMAGE_NAME}:latest
+          docker push $TIMESTAMP_TAG
